# aoc2023

haskell/: aoc2023.cabal  hie.yaml  shell.nix
haskell/npins/: sources.json
haskell/src/AOC/: Day1.hs  Day10.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  FailDay5.hs  Util.hs
haskell/test/AOC/: Day10Spec.hs  Day1Spec.hs  Day2Spec.hs  Day3Spec.hs  Day4Spec.hs  Day7Spec.hs  Day8Spec.hs  UtilSpec.hs
ocaml/: shell.nix
ocaml/aoc/: aoc.opam  dune-project
ocaml/aoc/lib/: aoc.ml  day1.ml  dune  util.ml
ocaml/aoc/test/: aoctests.ml  day1test.ml  dune  utiltest.ml
