cabal-version:      3.0
name:               aoc2023
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Tobias Pflug
maintainer:         tobias.pflug@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files: data/*.txt
tested-with:        GHC ==9.0.2

common common-options
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints
    -Wno-name-shadowing -Wno-type-defaults

library
  import:          common-options
  exposed-modules:
    AOC.Day1
    AOC.Day2
    AOC.Day3
    AOC.Day4
    AOC.Day5
    AOC.Day6
    AOC.Day7
    AOC.Day8
    AOC.FailDay5
    AOC.SamirDay7
    AOC.Util

  build-depends:
    , array
    , base         ^>=4.17
    , containers
    , megaparsec
    , monad-loops
    , split
    , text
    , trifecta
    , vector

  hs-source-dirs:  src

test-suite tests
  import:             common-options
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  other-modules:
    AOC.Day1Spec
    AOC.Day2Spec
    AOC.Day3Spec
    AOC.Day4Spec
    AOC.Day7Spec
    AOC.Day8Spec
    AOC.UtilSpec

  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
    , aoc2023
    , base     ^>=4.17
    , hspec
    , text
